# distill

./: README.md  efficient_sdft_proposal.md  pyproject.toml
src/data/: prep_knowledge.py  prep_skill_learning.py
src/data/science_qa/: test.jsonl  train.jsonl  val.jsonl
src/model/: config.py  ema.py  hf_model.py  kl_gradient.py
src/results/exp_01/exp_01_2026-02-11_21-54-31/gpu_0/results_2026-02-11_21-54-38/: config.json
src/results/exp_01/exp_01_2026-02-11_21-54-31/gpu_1/results_2026-02-11_21-54-37/: config.json
src/results/exp_01/exp_01_2026-02-11_21-54-31/gpu_2/results_2026-02-11_21-54-38/: config.json
src/run/: config.py  dataloader.py  distributed.py  eval.py  logger.py  main.py  utils.py
src/run/orchestrate/: config.py  parallel.py
src/run/orchestrate/experiment/: exp_01_skill_learning.py
src/run/train/: cpt.py  dft.py  esdft.py  sdft.py  sft.py  sft_reinvoke.py
