[project]
name = "sdft"
version = "0.1.0"
description = "Reproduction of Self-Distillation Enables Continual Learning (Shenfeld et al., 2026)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.0",
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "jupyter",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "torch>=2.5.0",
    "tqdm>=4.67.0",
    "transformers>=4.48.0",
    "vllm>=0.6.0",
    "lm-eval>=0.4.0",
]

